@@ -38,8 +38,6 @@
 #include "logger.h"
 #include "socket.h"
 
-#define BROADCAST_FLAG 0x8000
-
 static const char *dhcp_message[] = {
 	[DHCP_DISCOVER] 	= "DHCP_DISCOVER",
 	[DHCP_OFFER]		= "DHCP_OFFER",
@@ -248,7 +246,13 @@ size_t send_message (const interface_t *iface, const dhcp_t *dhcp,
 
 	*p++ = DHCP_END;
 
+#ifdef DHCP_MESSAGE_LENTH_MIN
+	while (p - m < DHCP_MESSAGE_LENTH_MIN)
+		*p++ = DHCP_PAD;
+#endif
+
 	message_length = p - m;
+	logger (LOG_DEBUG, "xx %d\n", message_length);
 
 	memset (&packet, 0, sizeof (struct udp_dhcp_packet));
 	make_dhcp_packet (&packet, (unsigned char *) &message, message_length,
